// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Starbust Loose 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
        "overflow": "hidden",
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View>
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={1334}
      bbWidth={1334}
      color={4292951891}
      focusable={false}
      height={1334}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 1334,
            "width": 1334,
          },
        ]
      }
      tintColor={4292951891}
      vbHeight={802}
      vbWidth={802}
      width={1334}
    >
      <RNSVGGroup>
        <RNSVGGroup
          fill={4292951891}
          propList={
            Array [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M432.8.4h-64.1l32.1 400.8z"
          />
          <RNSVGPath
            d="M584 .4h-72.6L400.8 401.2zM290.2.4h-72.7l183.3 400.8zM801.6 210.5v-85.6L400.8 401.2zM795.6.4H686L400.8 401.2zM801.6 363.1V297L400.8 401.2zM115.7.4H6l394.8 400.8zM0 439.3v66l400.8-104.1z"
          />
          <RNSVGPath
            d="M217.5 802h72.7l110.6-400.8z"
          />
          <RNSVGPath
            d="M0 591.7v85.6l400.8-276.1zM686 802h109.6L400.8 401.2z"
          />
          <RNSVGPath
            d="M368.7 802h64.1l-32-400.8z"
          />
          <RNSVGPath
            d="M0 297v66.1l400.8 38.1z"
          />
          <RNSVGPath
            d="M6 802h109.7l285.1-400.8zM511.4 802H584L400.8 401.2zM0 124.9v85.6l400.8 190.7zM400.8 401.2l400.8 104.1v-66zM801.6 677.3v-85.6L400.8 401.2z"
          />
        </RNSVGGroup>
      </RNSVGGroup>
    </RNSVGSvgView>
    <BVLinearGradient
      colors={
        Array [
          14761811,
          4292951891,
          4292951891,
        ]
      }
      endPoint={
        Object {
          "x": 0.5,
          "y": 1,
        }
      }
      locations={null}
      startPoint={
        Object {
          "x": 0.5,
          "y": 0,
        }
      }
      style={
        Array [
          Array [
            Object {
              "bottom": 0,
              "height": 75,
              "position": "absolute",
            },
            Object {
              "width": 1334,
            },
          ],
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`Storyshots Starbust Win 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
        "overflow": "hidden",
        "width": "100%",
      },
      undefined,
    ]
  }
  testID="spiral"
>
  <View>
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={1334}
      bbWidth={1334}
      color={4282233721}
      focusable={false}
      height={1334}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 1334,
            "width": 1334,
          },
        ]
      }
      tintColor={4282233721}
      vbHeight={802}
      vbWidth={802}
      width={1334}
    >
      <RNSVGGroup>
        <RNSVGGroup
          fill={4282233721}
          propList={
            Array [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M432.8.4h-64.1l32.1 400.8z"
          />
          <RNSVGPath
            d="M584 .4h-72.6L400.8 401.2zM290.2.4h-72.7l183.3 400.8zM801.6 210.5v-85.6L400.8 401.2zM795.6.4H686L400.8 401.2zM801.6 363.1V297L400.8 401.2zM115.7.4H6l394.8 400.8zM0 439.3v66l400.8-104.1z"
          />
          <RNSVGPath
            d="M217.5 802h72.7l110.6-400.8z"
          />
          <RNSVGPath
            d="M0 591.7v85.6l400.8-276.1zM686 802h109.6L400.8 401.2z"
          />
          <RNSVGPath
            d="M368.7 802h64.1l-32-400.8z"
          />
          <RNSVGPath
            d="M0 297v66.1l400.8 38.1z"
          />
          <RNSVGPath
            d="M6 802h109.7l285.1-400.8zM511.4 802H584L400.8 401.2zM0 124.9v85.6l400.8 190.7zM400.8 401.2l400.8 104.1v-66zM801.6 677.3v-85.6L400.8 401.2z"
          />
        </RNSVGGroup>
      </RNSVGGroup>
    </RNSVGSvgView>
    <BVLinearGradient
      colors={
        Array [
          4043641,
          4282233721,
          4282233721,
        ]
      }
      endPoint={
        Object {
          "x": 0.5,
          "y": 1,
        }
      }
      locations={null}
      startPoint={
        Object {
          "x": 0.5,
          "y": 0,
        }
      }
      style={
        Array [
          Array [
            Object {
              "bottom": 0,
              "height": 75,
              "position": "absolute",
            },
            Object {
              "width": 1334,
            },
          ],
          undefined,
        ]
      }
      testID="spiral-gradient"
    />
  </View>
</View>
`;
